--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.7.0",
-    "pg": "^8.8.0"
+    "joi": "^17.7.0"
   }
 }
